--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
   "name": "server",
   "version": "0.0.0",
+  "main": "app.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/bepyan/todo-something.git"
+  },
+  "author": "bepyan",
+  "license": "ISC",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
