--- a/client/jsconfig.json
+++ b/client/jsconfig.json
@@ -1,8 +1,7 @@
 {
   "compilerOptions": {
-    "baseUrl": "src"
+    "module": "commonjs",
+    "target": "es6"
   },
-  "include": [
-      "src"
-  ]
+  "include": ["src/**/*"]
 }
